--- a/config.json
+++ b/config.json
@@ -12,10 +12,10 @@
     "evmchains": [
         {
             "ID": "C",
-            "NAME": "Fuji (C-Chain)",
-            "TOKEN": "AVAX",
-            "RPC": "https://api.avax-test.network/ext/C/rpc",
-            "CHAINID": 43113,
+            "NAME": "Marula (C-Chain)",
+            "TOKEN": "FUEL",
+            "RPC": "http://18.116.224.200/ext/C/rpc",
+            "CHAINID": 43003,
             "EXPLORER": "https://testnet.snowtrace.io",
             "IMAGE": "/avaxred.png",
             "MAX_PRIORITY_FEE": "2000000000",
